# tfilterpy

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  TFilterPy.html  TFilterPy.state_estimation.html  TFilterPy.utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: TFilterPy.doctree  TFilterPy.state_estimation.doctree  TFilterPy.utils.doctree  environment.pickle  index.doctree  modules.doctree
.github/workflows/: docs.yml  publish.yml  test_deploy.yml
TFilterPy/: __init__.py  base_estimator.py  module_functions.py
TFilterPy/state_estimation/: __init__.py  linear_filters.py  nonlinear_filters.py  particle_filters.py
TFilterPy/utils/: __init__.py  optimisation_utils.py
_modules/: index.html
_modules/TFilterPy/: base_estimator.html
_modules/TFilterPy/state_estimation/: linear_filters.html  nonlinear_filters.html  particle_filters.html
_modules/TFilterPy/utils/: optimisation_utils.html
_sources/: TFilterPy.state_estimation.rst.txt  TFilterPy.utils.rst.txt  index.rst.txt  modules.rst.txt
docs/source/: TFilterPy.rst  conf.py
examples/: motion-estimation-kalmanfilters.ipynb
examples/diagrams/: motion-estimation-kalmanfilters.ipynb
examples/notebooks/: introduction-to-particle-filters.ipynb
tests/: __init__.py  test_kalman_filter.py
