[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfilterpy"
version = "1.0.0"
description = "A Python package for state estimation using Kalman and Particle Filters"
authors = [
    { name = "Thabang Mashinini-Sekhoto", email = "thabangline@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "numpy>=1.21",
    "dask>=2023.5.0",
    "scipy>=1.7",
    "pytest>=7.0",
    "flake8>=4.0.1"
]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["TFilterPy", "TFilterPy.state_estimation", "TFilterPy.utils"]

[project.urls]
Homepage = "https://github.com/LeparaLaMapara/tfilterpy"
Documentation = "https://github.com/LeparaLaMapara/tfilterpy/docs"
Repository = "https://github.com/LeparaLaMapara/tfilterpy"
