[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfilterpy"
version = "1.0.0"
description = "A Python package for state estimation using Kalman and Particle Filters"
authors = [
    { name = "Thabang Mashinini-Sekhoto", email = "thabangline@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = [
    "numpy>=1.21",
    "dask>=2023.5.0",
    "scipy>=1.7"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=4.0.1"
]


[tool.setuptools.packages.find]
where = ["."]
include = ["TFilterPy*"]

[project.urls]
Homepage = "https://github.com/LeparaLaMapara/tfilterpy"
Documentation = "https://github.com/LeparaLaMapara/tfilterpy/docs"
Repository = "https://github.com/LeparaLaMapara/tfilterpy"
